--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "backend": "workspace:^1.0.0",
     "socket.io-client": "^4.5.1",
     "vue": "^3.2.37"
   },
