--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,11 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/node": "^18.7.12",
     "@vitejs/plugin-vue": "^3.0.3",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vue-tsc": "^0.39.5"
