--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.7",
     "vue-tsc": "^0.39.5"
   }
