--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^18.7.12",
     "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.6.4"
   }
 }
