--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "scripts": {
     "dev": "pnpm -r --parallel --if-present --stream dev",
     "dev:backend": "pnpm --filter backend dev",
-    "dev:frontend": "pnpm --filter frontend dev"
+    "dev:frontend": "pnpm --filter frontend dev",
+    "format": "pnpm exec prettier --write ."
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
