--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "dev": "pnpm -r --parallel --if-present --stream dev",
     "dev:backend": "pnpm --filter backend dev",
     "dev:frontend": "pnpm --filter frontend dev",
-    "format": "pnpm exec prettier --write ."
+    "format": "pnpm exec pretty-quick",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "prettier": "2.7.1"
+    "husky": "^8.0.0",
+    "prettier": "2.7.1",
+    "pretty-quick": "^3.1.3"
   }
 }
