--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "dev:backend": "pnpm --filter backend dev",
     "dev:frontend": "pnpm --filter frontend dev",
     "format": "pnpm exec pretty-quick",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "pnpm jest"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.8",
     "husky": "^8.0.0",
+    "jest": "^28.1.3",
     "prettier": "2.7.1",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "ts-jest": "^28.0.8",
+    "typescript": "^4.6.4"
   }
 }
