--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "npx nodemon ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "pnpm jest"
   },
   "author": "",
   "license": "ISC",
@@ -17,8 +17,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.8",
     "@types/node": "^18.7.12",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4"
   }
