--- a/package.json
+++ b/package.json
@@ -2,20 +2,17 @@
   "name": "battleship",
   "version": "0.0.1",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "pnpm -r --parallel --if-present --stream dev",
     "dev:backend": "pnpm --filter backend dev",
     "dev:frontend": "pnpm --filter frontend dev",
     "format": "pnpm exec pretty-quick",
     "prepare": "husky install",
-    "test": "pnpm jest"
+    "test": "pnpm --filter ./backend test && pnpm --filter ./frontend test"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.8",
     "husky": "^8.0.0",
-    "jest": "^28.1.3",
     "prettier": "2.7.1",
-    "pretty-quick": "^3.1.3",
-    "ts-jest": "^28.0.8",
-    "typescript": "^4.6.4"
+    "pretty-quick": "^3.1.3"
   }
 }
